--- a/crisis.html
+++ b/crisis.html
@@ -329,8 +329,9 @@
             <ul class="nav-links">
                 <li><a href="index.html">Home</a></li>
                 <li><a href="crisis.html">Crisis</a></li>
-                <li><a href="solutions.html">Solutions</a></li>
-                <li><a href="get-involved.html">Get Involved</a></li>
+                <li><a href="#">Get Involved</a></li>
+		<li><a href="#">Our Solutions</a></li>
+                
             </ul>
         </div>
     </nav>
