--- a/crisis.html
+++ b/crisis.html
@@ -329,9 +329,7 @@
             <ul class="nav-links">
                 <li><a href="index.html">Home</a></li>
                 <li><a href="crisis.html">Crisis</a></li>
-                <li><a href="#">Get Involved</a></li>
-		<li><a href="#">Our Solutions</a></li>
-                
+
             </ul>
         </div>
     </nav>
@@ -628,7 +626,7 @@
     </section>
 
     <!-- New Call to Action Section -->
-    <section class="cta-section">
+    <section  id="get-involved" class="cta-section">
 		<section class="cta-section">
 		<style>
 			/* Add these new styles */
