--- a/crisis.html
+++ b/crisis.html
@@ -629,31 +629,65 @@
     <section  id="get-involved" class="cta-section">
 		<section class="cta-section">
 		<style>
-			/* Add these new styles */
+			/* new styles */
+			 
+			:root {
+				--success-bg: rgba(151, 188, 98, 0.2);
+				--success-text: #97BC62;
+				--error-bg: rgba(255, 107, 107, 0.2);
+				--error-text: #FF6B6B;
+				--disabled-opacity: 0.7;
+				--disabled-cursor: not-allowed;
+				--border-radius: 4px;
+				--padding: 0.5rem;
+				--margin-top: 1rem;
+				--font-size: 1rem;
+			}
+
+			/* Form Message Styling */
 			.form-message {
-				margin-top: 1rem;
-				padding: 0.5rem;
-				border-radius: 4px;
+				margin-top: var(--margin-top);
+				padding: var(--padding);
+				border-radius: var(--border-radius);
 				display: none;
 				text-align: center;
+				font-size: var(--font-size);
+				transition: all 0.3s ease;
 			}
 
 			.form-message.success {
 				display: block;
-				background-color: rgba(151, 188, 98, 0.1);
-				color: #97BC62;
+				background-color: var(--success-bg);
+				color: var(--success-text);
 			}
 
 			.form-message.error {
 				display: block;
-				background-color: rgba(255, 107, 107, 0.1);
-				color: #FF6B6B;
+				background-color: var(--error-bg);
+				color: var(--error-text);
 			}
 
+			/* Button Styling */
 			.cta-button:disabled {
-				opacity: 0.7;
-				cursor: not-allowed;
+				opacity: var(--disabled-opacity);
+				cursor: var(--disabled-cursor);
+				background-color: #ccc;
 			}
+
+			.cta-button {
+				padding: var(--padding);
+				border: none;
+				border-radius: var(--border-radius);
+				font-size: var(--font-size);
+				transition: background-color 0.3s ease, color 0.3s ease;
+			}
+
+			.cta-button:hover:not(:disabled) {
+				background-color: var(--success-text);
+				color: white;
+			}
+			
+			.cta-content { background: var(--light); /* Use your theme's light background color */ padding: 2rem; border-radius: 8px; box-shadow: 0 10px 30px rgba(0, 0, 0, 0.1); text-align: center; margin: 2rem auto; max-width: 600px; } .cta-title { font-size: 2rem; color: var(--primary); margin-bottom: 1rem; } .cta-text { font-size: 1rem; color: var(--dark); margin-bottom: 2rem; } .cta-form { display: flex; flex-direction: column; gap: 1rem; } .cta-input { padding: 0.75rem; border: 1px solid var(--primary); border-radius: 4px; font-size: 1rem; color: var(--dark); } .cta-input::placeholder { color: var(--dark); } .cta-button { padding: 0.75rem; border: none; border-radius: 4px; background: var(--primary); color: white; font-size: 1rem; cursor: pointer; transition: background 0.3s ease; } .cta-button:hover { background: var(--primary-dark); } .form-message { margin-top: 1rem; padding: 0.5rem; border-radius: 4px; display: none; text-align: center; transition: all 0.3s ease; } .form-message.success { display: block; background-color: rgba(151, 188, 98, 0.1); color: #97BC62; } .form-message.error { display: block; background-color: rgba(255, 107, 107, 0.1); color: #FF6B6B; }
 		</style>
 
 		<div class="cta-content">
@@ -665,6 +699,7 @@
 				<div id="formMessage" class="form-message"></div>
 			</form>
 		</div>
+
 </section>
 
     <!-- New Footer Section -->
