--- a/crisis.html
+++ b/crisis.html
@@ -4,7 +4,7 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>E-Waste Crisis in South Africa | Environmental Impact</title>
-    <link rel="icon" type="image/png" href="https://github.com/ANONYMOUSx46/E-waste-website/blob/main/favicon.png">
+    <link rel="icon" type="image/png" href="https://files.oaiusercontent.com/file-1xNQZA1LtSmnPN8nXLQkXa?se=2024-12-05T16%3A02%3A46Z&sp=r&sv=2024-08-04&sr=b&rscc=max-age%3D604800%2C%20immutable%2C%20private&rscd=attachment%3B%20filename%3D1aaa8fbf-b547-4cda-88ff-3d953bc307e7.webp&sig=xI84qOSEFzodQJVZm3ewcW%2BAM2tou0J4dHN7SeVxpc0%3D">
 	<link href="https://fonts.googleapis.com/css2?family=Poppins:wght@300;400;600;700&display=swap" rel="stylesheet">
     <script src="https://cdnjs.cloudflare.com/ajax/libs/gsap/3.12.2/gsap.min.js"></script>
     <script src="https://cdnjs.cloudflare.com/ajax/libs/gsap/3.12.2/ScrollTrigger.min.js"></script>
