--- a/index.html
+++ b/index.html
@@ -1,7 +1,12 @@
-<html><head><base href="." target="_blank">
-<meta charset="UTF-8">
-<meta name="viewport" content="width=device-width, initial-scale=1.0">
-<title>E-Waste South Africa | Home</title>
+<html>
+    <head>
+        <base href="." target="_blank">
+        <meta charset="UTF-8">
+        <meta name="viewport" content="width=device-width, initial-scale=1.0">
+        <title>E-Waste South Africa | Home</title>
+        <link rel="icon" type="image/png" href="/favicon.png">
+    </head>
+        
 <style>
 :root {
     --primary: #2C5F2D;
